--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -262,12 +262,13 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 target_link_libraries(${PROJECT_NAME}
         PRIVATE
-        Qt5::Concurrent
-        Qt5::Gui
-        Qt5::Multimedia
-        Qt5::Network
-        Qt5::Svg
+        Qt5::Core
         Qt5::Widgets
+        Qt5::Gui
+        Qt5::Network
+        Qt5::Multimedia
+        Qt5::Svg
+        Qt5::Concurrent
         )
 
 if (WinToast_FOUND)
