--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -192,7 +192,7 @@ jobs:
       - name: Install dependencies (MacOS)
         if: startsWith(matrix.os, 'macos')
         run: |
-            brew install boost openssl rapidjson p7zip create-dmg cmake
+            brew install boost openssl rapidjson p7zip create-dmg cmake tree
         shell: bash
 
       - name: Build (MacOS)
@@ -217,21 +217,12 @@ jobs:
         shell: bash
 
       - name: Package (MacOS)
-        if: startsWith(matrix.os, 'macos') && matrix.build-system == 'qmake'
+        if: startsWith(matrix.os, 'macos')
         run: |
             ls -la
             pwd
             ls -la build || true
-            cd build
-            sh ./../.CI/CreateDMG.sh
-        shell: bash
-
-      - name: Package (MacOS)
-        if: startsWith(matrix.os, 'macos') && matrix.build-system == 'cmake'
-        run: |
-            ls -la
-            pwd
-            ls -la build || true
+            tree build
             cd build
             sh ./../.CI/CreateDMG.sh
         shell: bash
