update email and username

--- a/.github/workflows/push-aur.yml
+++ b/.github/workflows/push-aur.yml
@@ -16,7 +16,7 @@ jobs:
         uses: pajlada/aur-sync-action@master
         with:
           package_name: chatterino2-git
-          commit_username: 'Github Action Bot'
-          commit_email: github-action-bot@pajlada.com
+          commit_username: chatterino2-ci
+          commit_email: chatterino2-ci@pajlada.com
           ssh_private_key: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
           dry_run: true
