--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,43 +30,7 @@ if (CCACHE_PROGRAM)
     message("Using ${CCACHE_PROGRAM} for speeding up build")
 endif ()
 
-find_package(Git)
-
-if (GIT_EXECUTABLE)
-    execute_process(
-            COMMAND ${GIT_EXECUTABLE} rev-parse --is-inside-work-tree
-            WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-            RESULT_VARIABLE GIT_REPOSITORY_NOT_FOUND
-            ERROR_QUIET
-    )
-endif ()
-
-if (GIT_EXECUTABLE AND NOT GIT_REPOSITORY_NOT_FOUND)
-    execute_process(
-            COMMAND ${GIT_EXECUTABLE} rev-parse --short HEAD
-            WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-            OUTPUT_VARIABLE GIT_HASH
-            OUTPUT_STRIP_TRAILING_WHITESPACE
-    )
-
-    execute_process(
-            COMMAND ${GIT_EXECUTABLE} rev-parse HEAD
-            WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-            OUTPUT_VARIABLE GIT_COMMIT
-            OUTPUT_STRIP_TRAILING_WHITESPACE
-    )
-
-    execute_process(
-            COMMAND ${GIT_EXECUTABLE} describe
-            WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-            OUTPUT_VARIABLE GIT_RELEASE
-            OUTPUT_STRIP_TRAILING_WHITESPACE
-    )
-else ()
-    set(GIT_HASH "GIT-REPOSITORY-NOT-FOUND")
-    set(GIT_COMMIT "GIT-REPOSITORY-NOT-FOUND")
-    set(GIT_RELEASE "${PROJECT_VERSION}")
-endif ()
+include(${CMAKE_CURRENT_LIST_DIR}/cmake/GIT.cmake)
 
 find_package(Qt5 REQUIRED
     COMPONENTS
@@ -151,7 +115,5 @@ if (BUILD_TESTS)
     enable_testing()
     add_subdirectory(tests)
 endif ()
-
-message("Injected git values: ${GIT_COMMIT} (${GIT_RELEASE}) ${GIT_HASH}")
 
 feature_summary(WHAT ALL)
