--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,63 +46,66 @@ if (WIN32)
     find_package(WinToast REQUIRED)
 endif ()
 
-if (USE_PACKAGE_MANAGER)
-    include(pmm)
-    pmm(CONAN REMOTES anotherfoxguy-artifactory https://anotherfoxguy.jfrog.io/artifactory/api/conan/chatterino)
-else (USE_PACKAGE_MANAGER)
-    set(CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/dependencies" CACHE PATH "Path to the dependencies")
+# Find boost on the system
+find_package(Boost REQUIRED)
 
-    find_package(Boost REQUIRED)
-    find_package(OpenSSL REQUIRED)
+# Find OpenSSL on the system
+find_package(OpenSSL REQUIRED)
 
-    find_package(Threads REQUIRED)
+find_package(Threads REQUIRED)
 
-    find_library(LIBRT rt)
+find_library(LIBRT rt)
 
-    if (BUILD_APP)
-        if (USE_SYSTEM_LIBCOMMUNI)
-            find_package(LibCommuni REQUIRED)
-        else()
-            set(LIBCOMMUNI_ROOT_LIB_FOLDER "${CMAKE_SOURCE_DIR}/lib/libcommuni")
-            if (NOT EXISTS "${LIBCOMMUNI_ROOT_LIB_FOLDER}/CMakeLists.txt")
-                message(FATAL_ERROR "Submodules probably not loaded, unable to find lib/libcommuni/CMakeLists.txt")
-            endif()
-
-            add_subdirectory("${LIBCOMMUNI_ROOT_LIB_FOLDER}" EXCLUDE_FROM_ALL)
-        endif()
-        if (USE_SYSTEM_QT5KEYCHAIN)
-            find_package(Qt5Keychain REQUIRED)
-        else()
-            set(QT5KEYCHAIN_ROOT_LIB_FOLDER "${CMAKE_SOURCE_DIR}/lib/qtkeychain")
-            if (NOT EXISTS "${QT5KEYCHAIN_ROOT_LIB_FOLDER}/CMakeLists.txt")
-                message(FATAL_ERROR "Submodules probably not loaded, unable to find lib/qtkeychain/CMakeLists.txt")
-            endif()
-
-            option(QTKEYCHAIN_STATIC "" ON)
-            add_subdirectory("${QT5KEYCHAIN_ROOT_LIB_FOLDER}" EXCLUDE_FROM_ALL)
-            if (NOT TARGET qt5keychain)
-                message(FATAL_ERROR "qt5keychain target was not created :@")
-            endif()
-        endif()
-        find_package(RapidJSON REQUIRED)
-        find_package(Websocketpp REQUIRED)
-    endif ()
-    if (BUILD_TESTS)
-        find_package(GTest REQUIRED)
-    endif ()
-
-    find_package(PajladaSerialize REQUIRED)
-    find_package(PajladaSignals REQUIRED)
-    if (USE_SYSTEM_PAJLADA_SETTINGS)
-        find_package(PajladaSettings REQUIRED)
+if (BUILD_APP)
+    if (USE_SYSTEM_LIBCOMMUNI)
+        find_package(LibCommuni REQUIRED)
     else()
-        if (NOT EXISTS "${CMAKE_SOURCE_DIR}/lib/settings/CMakeLists.txt")
-            message(FATAL_ERROR "Submodules probably not loaded, unable to find lib/settings/CMakeLists.txt")
+        set(LIBCOMMUNI_ROOT_LIB_FOLDER "${CMAKE_SOURCE_DIR}/lib/libcommuni")
+        if (NOT EXISTS "${LIBCOMMUNI_ROOT_LIB_FOLDER}/CMakeLists.txt")
+            message(FATAL_ERROR "Submodules probably not loaded, unable to find lib/libcommuni/CMakeLists.txt")
         endif()
 
-        add_subdirectory("${CMAKE_SOURCE_DIR}/lib/settings" EXCLUDE_FROM_ALL)
+        add_subdirectory("${LIBCOMMUNI_ROOT_LIB_FOLDER}" EXCLUDE_FROM_ALL)
     endif()
-endif (USE_PACKAGE_MANAGER)
+
+    # Link QtKeychain statically
+    option(QTKEYCHAIN_STATIC "" ON)
+
+    if (USE_SYSTEM_QT5KEYCHAIN)
+        find_package(Qt5Keychain REQUIRED)
+    else()
+        set(QT5KEYCHAIN_ROOT_LIB_FOLDER "${CMAKE_SOURCE_DIR}/lib/qtkeychain")
+        if (NOT EXISTS "${QT5KEYCHAIN_ROOT_LIB_FOLDER}/CMakeLists.txt")
+            message(FATAL_ERROR "Submodules probably not loaded, unable to find lib/qtkeychain/CMakeLists.txt")
+        endif()
+
+        add_subdirectory("${QT5KEYCHAIN_ROOT_LIB_FOLDER}" EXCLUDE_FROM_ALL)
+        if (NOT TARGET qt5keychain)
+            message(FATAL_ERROR "qt5keychain target was not created :@")
+        endif()
+    endif()
+
+    find_package(RapidJSON REQUIRED)
+
+    find_package(Websocketpp REQUIRED)
+endif ()
+
+if (BUILD_TESTS)
+    find_package(GTest REQUIRED)
+endif ()
+
+find_package(PajladaSerialize REQUIRED)
+find_package(PajladaSignals REQUIRED)
+
+if (USE_SYSTEM_PAJLADA_SETTINGS)
+    find_package(PajladaSettings REQUIRED)
+else()
+    if (NOT EXISTS "${CMAKE_SOURCE_DIR}/lib/settings/CMakeLists.txt")
+        message(FATAL_ERROR "Submodules probably not loaded, unable to find lib/settings/CMakeLists.txt")
+    endif()
+
+    add_subdirectory("${CMAKE_SOURCE_DIR}/lib/settings" EXCLUDE_FROM_ALL)
+endif()
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
