Remove package manager stuff from tests
figured out why discovering/adding tests to ctest doesn't work and added
a comment about it at the bottom of the tests cmakelists file

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -488,7 +488,9 @@ target_compile_definitions(${PROJECT_NAME} PRIVATE
     CHATTERINO_GIT_COMMIT=\"${GIT_COMMIT}\"
     )
 if (WIN32)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE USEWINSDK)
+    target_compile_definitions(${PROJECT_NAME} PRIVATE
+        USEWINSDK
+        )
     set_target_properties(${PROJECT_NAME} PROPERTIES WIN32_EXECUTABLE TRUE)
 endif ()
 
