--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,12 +73,11 @@ jobs:
 
       - name: Install dependencies (Windows)
         if: startsWith(matrix.os, 'windows')
-        run: choco install conan -y
-        shell: cmd
+        run: |
+            choco install conan -y
 
-      - name: Add Conan to path
-        if: startsWith(matrix.os, 'windows')
-        run: echo "C:\Program Files\Conan\conan\" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+            refreshenv
+        shell: cmd
 
       - name: Build (Windows)
         if: startsWith(matrix.os, 'windows') && matrix.build-system == 'qmake'
@@ -86,7 +85,7 @@ jobs:
             call "%programfiles(x86)%\Microsoft Visual Studio\%vs_version%\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
             mkdir build
             cd build
-            conan install ..
+            "C:\Program Files\Conan\conan\conan.exe" install ..
             qmake ..
             set cl=/MP
             nmake /S /NOLOGO
@@ -102,7 +101,7 @@ jobs:
             call "%programfiles(x86)%\Microsoft Visual Studio\%vs_version%\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
             mkdir build
             cd build
-            conan install ..
+            "C:\Program Files\Conan\conan\conan.exe" install ..
             cmake -G"NMake Makefiles" -DCMAKE_BUILD_TYPE=Release -DUSE_CONAN=ON ..
             set cl=/MP
             nmake /S /NOLOGO
