Attempt to fix builds on ubuntu

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,6 +101,7 @@ jobs:
             sudo apt-get -y install \
                 libssl-dev \
                 libboost-dev \
+                libxcb-randr0-dev \
                 libboost-system-dev \
                 libboost-filesystem-dev \
                 libpulse-dev \
