--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "lib/websocketpp"]
 	path = lib/websocketpp
 	url = https://github.com/ziocleto/websocketpp
+[submodule "lib/lru_cache"]
+	path = lib/lru_cache
+	url = https://github.com/nitnelave/lru_cache
