--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,6 +94,7 @@ endif ()
 
 find_package(PajladaSerialize REQUIRED)
 find_package(PajladaSignals REQUIRED)
+find_package(LRUCache REQUIRED)
 
 if (USE_SYSTEM_PAJLADA_SETTINGS)
     find_package(PajladaSettings REQUIRED)
