Update tag expression matching for homebrew action

--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -2,6 +2,6 @@ name: 'Publish Homebrew Cask on Release'
 on:
   push:
     tags:
-      # Should match semver like v2.31.87-beta
-      - v2.[0-9]+.[0-9]+**
+      # Should match semver for mainline releases (not including -beta)
+      - v2.[0-9]+.[0-9]+
 
