Add TODO to on tag hook

--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -4,6 +4,8 @@ on:
     tags:
       # Should match semver for mainline releases (not including -beta)
       - v2.[0-9]+.[0-9]+
+      # TODO: handle beta and nightly releases
+      # Also maybe add check to c2 so update checker mentions using brew?
 
 
 # Steps:
