--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -27,3 +27,11 @@ jobs:
   update_stable_homebrew_cask:
     name: 'Update the stable homebrew cask'
     runs-on: 'macos-latest'
+    steps:
+      # Checkout the forked homebrew casks repo
+      - name: 'Checkout Homebrew Cask repo'
+        uses: 'GuillaumeFalourd/clone-github-repo-action@v1'
+        with:
+          # TODO: move to envvar
+          owner: 'Chatterino'
+          repository: 'homebrew-cask'
