Pass the stripped version variable to github envvars for homebrew action

--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -42,4 +42,4 @@ jobs:
       - name: 'Extract version from tag'
         run: |
             'STRIPPED_VERSION=$("refs/tags/$(C2_TAGGED_VERSION)" | sed "s/refs\/tags\///gm")'
-            'echo "C2_TAGGED_VERSION=$()" >> $GITHUB_ENV'
+            'echo "C2_TAGGED_VERSION=$(STRIPPED_VERSION)" >> $GITHUB_ENV'
