--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -10,6 +10,7 @@ on:
 
 env:
   # This gets updated later on in the run by a bash script to strip the prefix
+  C2_CASK_NAME: 'chatterino'
   C2_TAGGED_VERSION: '${{ github.ref }}'
 
 # Notes:
@@ -25,4 +26,6 @@ jobs:
         run: |
             'STRIPPED_VERSION=$("refs/tags/$(C2_TAGGED_VERSION)" | sed "s/refs\/tags\///gm")'
             'echo "C2_TAGGED_VERSION=$(STRIPPED_VERSION)" >> $GITHUB_ENV'
+      - name: 'Execute ''brew bump-cask-pr'' with version'
+        run: 'brew bump-cask-pr --version $(C2_TAGGED_VERSION) $(C2_CASK_NAME)'
 
