--- a/.github/workflows/homebrew.yml
+++ b/.github/workflows/homebrew.yml
@@ -5,7 +5,7 @@ on:
       # Should match semver for mainline releases (not including -beta)
       - 'v2.[0-9]+.[0-9]+'
       # TODO: handle beta and nightly releases
-      # Also maybe add check to c2 so update checker mentions using brew?
+      # Need to make those casks manually first
       # - v2.[0-9]+.[0-9]+-beta(?:[0-9]+)
 
 env:
@@ -18,6 +18,7 @@ jobs:
     name: 'Update the stable homebrew cask'
     runs-on: 'macos-latest'
     steps:
+      # Pulls out the version from the ref (e.g. refs/tags/v2.3.1 -> 2.3.1)
       - name: 'Extract version from tag'
         run: |
             'STRIPPED_VERSION=$("refs/tags/$(C2_TAGGED_VERSION)" | sed "s/refs\/tags\///gm")'
