Add some cheeky benchmark tests
We don't do anything super relevant here, but it just shows how we can
go about adding more benchmarks.

Currently, this builds off the same 'broken' building that tests does,
    and they don't share the 'library', so there are definitely
    improvements that can be made to the usability of this and tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ project(chatterino VERSION 2.3.2)
 
 option(BUILD_APP "Build Chatterino" ON)
 option(BUILD_TESTS "Build the tests for Chatterino" OFF)
+option(BUILD_BENCHMARKS "Build the benchmarks for Chatterino" OFF)
 option(USE_SYSTEM_PAJLADA_SETTINGS "Use system pajlada settings library" OFF)
 option(USE_SYSTEM_LIBCOMMUNI "Use system communi library" OFF)
 option(USE_SYSTEM_QT5KEYCHAIN "Use system Qt5Keychain library" OFF)
@@ -96,6 +97,11 @@ if (BUILD_TESTS)
     find_package(GTest REQUIRED)
 endif ()
 
+if (BUILD_BENCHMARKS)
+    # Include system benchmark (Google Benchmark)
+    find_package(benchmark REQUIRED)
+endif ()
+
 find_package(PajladaSerialize REQUIRED)
 find_package(PajladaSignals REQUIRED)
 find_package(LRUCache REQUIRED)
@@ -119,6 +125,9 @@ endif ()
 if (BUILD_TESTS)
     enable_testing()
     add_subdirectory(tests)
+endif ()
+if (BUILD_BENCHMARKS)
+    add_subdirectory(benchmarks)
 endif ()
 
 feature_summary(WHAT ALL)
