--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,6 +9,7 @@ set(test_SOURCES
     ${CMAKE_CURRENT_LIST_DIR}/src/HighlightPhrase.cpp
     ${CMAKE_CURRENT_LIST_DIR}/src/Emojis.cpp
     ${CMAKE_CURRENT_LIST_DIR}/src/ExponentialBackoff.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/TwitchAccount.cpp
     )
 
 add_executable(${PROJECT_NAME} ${test_SOURCES})
