--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ project(chatterino VERSION 2.3.3)
 
 option(BUILD_APP "Build Chatterino" ON)
 option(BUILD_TESTS "Build the tests for Chatterino" OFF)
+option(BUILD_BENCHMARKS "Build the benchmarks for Chatterino" OFF)
 option(USE_SYSTEM_PAJLADA_SETTINGS "Use system pajlada settings library" OFF)
 option(USE_SYSTEM_LIBCOMMUNI "Use system communi library" OFF)
 option(USE_SYSTEM_QT5KEYCHAIN "Use system Qt5Keychain library" OFF)
@@ -94,6 +95,11 @@ if (BUILD_TESTS)
     find_package(GTest REQUIRED)
 endif ()
 
+if (BUILD_BENCHMARKS)
+    # Include system benchmark (Google Benchmark)
+    find_package(benchmark REQUIRED)
+endif ()
+
 find_package(PajladaSerialize REQUIRED)
 find_package(PajladaSignals REQUIRED)
 find_package(LRUCache REQUIRED)
@@ -111,7 +117,7 @@ endif()
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-if (BUILD_TESTS)
+if (BUILD_TESTS OR BUILD_BENCHMARKS)
     add_definitions(-DCHATTERINO_TEST)
 endif ()
 
@@ -120,6 +126,10 @@ add_subdirectory(src)
 if (BUILD_TESTS)
     enable_testing()
     add_subdirectory(tests)
+endif ()
+
+if (BUILD_BENCHMARKS)
+    add_subdirectory(benchmarks)
 endif ()
 
 feature_summary(WHAT ALL)
