Huge changes, it works properly now

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -378,6 +378,8 @@ set(SOURCE_FILES
         widgets/helper/EditableModelView.hpp
         widgets/helper/EffectLabel.cpp
         widgets/helper/EffectLabel.hpp
+        widgets/helper/LoginServer.cpp
+        widgets/helper/LoginServer.hpp
         widgets/helper/NotebookButton.cpp
         widgets/helper/NotebookButton.hpp
         widgets/helper/NotebookTab.cpp
