--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -5,4 +5,4 @@ contact_links:
       about: Got something you think should change or be added? Search for or start a new discussion!
     - name: Help
       url: https://github.com/chatterino/chatterino2/discussions/categories/q-a
-      about: osu! not working as you'd expect? Not sure it's a bug? Check the Q&A section!
+      about: Chatterino2 not working as you'd expect? Not sure it's a bug? Check the Q&A section!
